fix overflow

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html, body {
   height: 100%;
   margin: 0px;
-  padding: 0px
+  padding: 0px;
+  overflow: hidden;
 }
 
 #type-button{
